# Smarter_ROS

./: .gitignore  README.md
assignment_1/: CMakeLists.txt  package.xml  package.xml.ros1
assignment_1/src/: image_publisher_node.cpp  image_subscriber_node.cpp  object_detect_node.cpp
project/: CMakeLists.txt  Dockerfile  docker_entrypoint.sh  package.xml
project/custom_msg/: CMakeLists.txt
project/custom_msg/experiment/log/: latest_build
project/custom_msg/pub_sub_custom_msg/: CMakeLists.txt  README.md  package.xml
project/msg/: ControllerInput.msg  ControllerOutput.msg  SignalReference.msg  SignalTrue.msg
project/pub_sub_custom_msg/: CMakeLists.txt  README.md
project/pub_sub_custom_msg/launch/: pid_launch.py  pub_launch.py  sub_launch.py
project/pub_sub_custom_msg/src/: pid.cpp
smarter_hello_world/: CMakeLists.txt  package.xml
smarter_hello_world/src/: hello_world.cpp
smarter_image_processing/: CMakeLists.txt  package.xml
smarter_image_processing/launch/: dual_viewers.launch  dual_viewers_gray.launch
smarter_image_processing/src/: face_detect_node.cpp  gray_scale_converter_node.cpp  image_publisher_node.cpp  image_subscriber_node.cpp  object_detect_node.cpp
smarter_rosbag/: CMakeLists.txt  package.xml  tf.bag
smarter_rosbag/launch/: replay_parsed_bag.launch  replay_parsed_bag.py  replay_tf.launch  replay_tf.py  replay_tf_with_queries.launch  replay_tf_with_queries.py  replay_tf_with_queries_clock.launch  replay_tf_with_queries_clock.py  start_and_record_tf.launch  start_and_record_tf.py
smarter_rosbag/src/: logfile_parser.cpp
smarter_rviz/: CMakeLists.txt  package.xml
smarter_rviz/launch/: frames.gv  replay_parsed_bag.rviz  smarter_rviz.launch  smarter_rviz.py  smarter_rviz.rviz  smarter_tf.rviz
smarter_rviz/src/: send_rviz_markers.cpp
smarter_tf/: CMakeLists.txt  package.xml
smarter_tf/launch/: smarter_tf.launch  smarter_tf.py
smarter_tf/src/: get_tfs.cpp  send_tfs.cpp
