<?xml version="1.0"?>
<package format="3">
  <name>smarter_hello_world</name>
  <version>0.0.1</version>
  <description>A short description of your package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Insert your license here</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <!--<depend>your_other_dependencies</depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

